--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,22 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: DM587/DM561 (E23) - Scientific Programming
+title: DM587/DM579 (E23) - Scientific Programming
 email: marco@imada.sdu.dk
-description: Course on linear algebra, second year of Bachelor in Computer Science at University of Southern Denmark
-# >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
+Course on linear algebra applications and scientific programming second year of Bachelor in Computer Science and Applied Mathematics at University of Southern Denmark
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dm561.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dm587.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 ## For local hosting uncomment the following two lines
 # baseurl: "/u/march/Teaching/AY2022-2023/DM587"
 # url: "https://imada.sdu.dk/"
 # twitter_username: jekyllrb
 github_username:  belzebuu
 
-repository: "belzebuu/DM561"
+repository: "DM587/dm587.github.io"
 
 show_downloads: false
 # google_analytics: [Your Google Analytics tracking ID]
