--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,10 @@ collections:
 
 
 # Build settings
-markdown: kramdown
+markdown: kramdown    
+kramdown:
+  highlighter: rouge
+  input: GFM
 # theme: minima
 #theme: jekyll-theme-slate
 theme: jekyll-theme-architect
