--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ description: >- # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dm587.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "https://dm587.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 ## For local hosting uncomment the following two lines
-# baseurl: "/u/march/Teaching/AY2023-2024/DM587"
-# url: "https://imada.sdu.dk/"
+baseurl: "/u/march/Teaching/AY2023-2024/DM587"
+url: "https://imada.sdu.dk/"
 # twitter_username: jekyllrb
 github_username:  belzebuu
 
