--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+lsi: false
+safe: true
+source: .
+incremental: false
+
+
 title: DM587/DM579 (E23) - Scientific Programming
 email: marco@imada.sdu.dk
 description: >- # this means to ignore newlines until "baseurl:"
@@ -63,11 +69,19 @@ collections:
 
 
 
+highlighter: rouge
+gist:
+  noscript: false
+
 # Build settings
 markdown: kramdown    
 kramdown:
-  highlighter: rouge
+  #highlighter: rouge
   input: GFM
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
+
 # theme: minima
 #theme: jekyll-theme-slate
 theme: jekyll-theme-architect
